--- a/app/assets/stylesheets/treeview.css
+++ b/app/assets/stylesheets/treeview.css
@@ -95,6 +95,20 @@ right connector from last child*/
         -moz-transition: all 0.5s;
 }
 
+.tree li p{
+    border: 1px solid #ccc;
+    margin:10px;
+    width:100px;
+    height:100px;
+    border-radius:100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+
+    text-align:center;
+    font-size:14px;
+    overflow:hidden;
+}
+
 /*Time for some hover effects*/
 /*We will apply the hover effect the the lineage of the element also*/
 .tree li a:hover, .tree li a:hover+ul li a {
