--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -24,16 +24,23 @@
     
       var roots = $("#hidden-entity li");
       for(var i = 0;i<roots.length;i++){
-        $.ajax({
-          url:'/departments/sub_departments',
-          type:'GET',
-          data:{id:roots.eq(i).attr("entity")},
-          dataType:'json',
-          success:appendChild
-        })
+        getEntities(roots.eq(i).attr("entity"));
+        getChild(roots.eq(i).attr("entity"));
       }
     
   });
+
+  function getEntities(id){
+    $.ajax({
+      url:'/departments/sub_entities',
+      type:'GET',
+      data:{id:id},
+      dataType:'json',
+      success:function(data){
+        //append a new entity to the entity group
+      }
+    });
+  }
   
   function getChild(id){
     $.ajax({
@@ -51,7 +58,7 @@
       var id = data.content.id;
       $("li[entity_group="+id+"]").append("<ul />");
       for(var i = 0;i<childs.length;i++){
-        $('<li entity_group="'+childs[i].id+'"><a>'+childs[i].name+'</li>').appendTo($("li[entity_group="+id+"] ul")).ready(getChild(childs[i].id));
+        $('<li entity_group="'+childs[i].id+'"><a>'+childs[i].name+'</li>').appendTo($("li[entity_group="+id+"] ul")).ready(function(){getChild(childs[i].id);getEntities(childs[i].id)});
       }
     }
   }
