--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,8 +24,8 @@
                     <tr>
                       <td class="user-manage-name"><%= user.first_name %></td>
                       <td class="user-manage-title"><%= user.title %></td>
-                      <td class="user-manage-entity-group" value="<%=user.entity_group_id%>"><%= user.entity_group_name %></td>
-                      <td class="user-manage-entity"  value="<%=user.entity_id%>"><%= user.entity_name %></td>
+                      <td class="user-manage-entity-group" value="<%= user.entity_group_id %>"><%= user.entity_group_name %></td>
+                      <td class="user-manage-entity" value="<%= user.entity_id %>"><%= user.entity_name %></td>
                       <td class="user-manage-authority" value="<%= user.role_id %>"><%= UsersHelper.get_user_role_display(user.role_id) %></td>
                     </tr>
                     <tr>
@@ -46,17 +46,34 @@
           <div>
             <input type="text" placeholder="* <%= t 'manage.user.new.name' %>" id="edit-user-name" general="user-name"/>
             <input type="text" placeholder="* <%= t 'manage.user.new.email' %>" id="edit-user-mail" general="user-mail"/>
-             <input type="text" placeholder="<%= t 'manage.user.new.title' %>" id="edit-user-title" general="user-title"/>
+            <input type="text" placeholder="<%= t 'manage.user.new.title' %>" id="edit-user-title" general="user-title"/>
+
+            <div>
+              <select data-placeholder="<%= t 'manage.user.new.entity_group' %>"  id="edit-entity-group-for-kpi" class="single-select">
+                <option value=""></option>
+                <% @departments.each do |department| %>
+                    <option value="<%= department.id %>"><%= department.name %></option>
+                <% end %>
+              </select>
+            </div>
+            <div>
+              <select data-placeholder="<%= t 'manage.user.new.dep' %>"  id="edit-department-for-kpi"  class="single-select">
+                <option value=""></option>
+                <% @data_points.each do |data_point| %>
+                    <option value="<%= data_point.id %>"><%= data_point.name %></option>
+                <% end %>
+              </select>
+            </div>
             <label>
-              <input type="radio" name="edit-user-role" data-name="General" data-role="1" value="100" checked>
-               <%= t 'manage.user.role.user' %>
+              <input type="radio" name="edit-user-role" data-name="General" data-role="1" value="<%=Role.user%>" checked>
+              <%= t 'manage.user.role.user' %>
             </label>
             <label>
-              <input type="radio" name="edit-user-role" data-name="General Manager" data-role="3" value="300">
-               <%= t 'manage.user.role.director' %>
+              <input type="radio" name="edit-user-role" data-name="General Manager" data-role="3" value="<%=Role.director%>">
+              <%= t 'manage.user.role.director' %>
             </label>
             <label>
-              <input type="radio" name="edit-user-role" data-name="Administrator" data-role="4" value="400">
+              <input type="radio" name="edit-user-role" data-name="Administrator" data-role="4" value="<%=Role.admin%>">
               <%= t 'manage.user.role.admin' %>
             </label>
             <input type="submit" value="Ok" class="btn btn-primary" id="manage-user-edit-old"/>
@@ -69,16 +86,19 @@
   <aside class="content-right-nav" name='group' id="content-right-nav">
     <section class="solid">
       <h3><%= t 'manage.user.desc.create' %></h3>
+
       <p><%= t 'manage.user.desc.create_desc' %></p>
-      <a class="btn btn-primary" id="add-user-show"><%= t 'manage.user.desc.create_now'%></a>
+      <a class="btn btn-primary" id="add-user-show"><%= t 'manage.user.desc.create_now' %></a>
     </section>
     <section class="solid">
       <h3><%= t 'manage.user.desc.assign' %></h3>
+
       <p><%= t 'manage.user.desc.assign_desc' %></p>
-      <a class="btn btn-primary" id="manage-user-delivery"><%= t 'manage.user.desc.assign_now'%></a>
+      <a class="btn btn-primary" id="manage-user-delivery"><%= t 'manage.user.desc.assign_now' %></a>
     </section>
     <section class="solid">
       <h3><%= t 'manage.base.next' %></h3>
+
       <p><%= t 'manage.user.desc.next_desc' %></p>
       <a class="btn btn-primary" href="<%= entity_groups_path %>"><%= t 'manage.view.desc.manage' %></a>
     </section>
@@ -94,32 +114,33 @@
     <input type="text" placeholder="<%= t 'manage.user.new.title' %>" id="new-user-title" general="user-title"/>
     <input type="password" placeholder="* <%= t 'manage.user.new.pwd' %>" id="new-user-password"/>
     <input type="password" placeholder="* <%= t 'manage.user.new.pwd_con' %>" id="new-user-password-confirm"/>
+
     <div class="div-select">
-      <select data-placeholder="<%= t 'manage.user.new.entity_group' %>" class="chosen-select" id="entity-group-for-kpi">
+      <select data-placeholder="<%= t 'manage.user.new.entity_group' %>" id="entity-group-for-kpi"  class="single-select">
         <option value=""></option>
-        <%@departments.each do |department|%>
-            <option value="<%= department.id%>" ><%= department.name%></option>
-        <%end %>
+        <% @departments.each do |department| %>
+            <option value="<%= department.id %>"><%= department.name %></option>
+        <% end %>
       </select>
     </div>
     <div class="div-select">
-      <select data-placeholder="<%= t 'manage.user.new.dep' %>" class="chosen-select" id="department-for-kpi">
+      <select data-placeholder="<%= t 'manage.user.new.dep' %>" id="department-for-kpi"  class="single-select">
         <option value=""></option>
-        <%@data_points.each do |data_point|%>
-            <option value="<%= data_point.id%>" ><%= data_point.name%></option>
-        <%end %>
+        <% @data_points.each do |data_point| %>
+            <option value="<%= data_point.id %>"><%= data_point.name %></option>
+        <% end %>
       </select>
     </div>
     <label>
-      <input type="radio" name="user-role" data-name="General" data-role="1" value="100" checked>
+      <input type="radio" name="user-role" data-name="General" data-role="1" value="<%=Role.user%>" checked>
       <%= t 'manage.user.role.user' %>
     </label>
     <label>
-      <input type="radio" name="user-role" data-name="General Manager" data-role="3" value="300">
+      <input type="radio" name="user-role" data-name="General Manager" data-role="3" value="<%=Role.director%>">
       <%= t 'manage.user.role.director' %>
     </label>
     <label>
-      <input type="radio" name="user-role" data-name="Administrator" data-role="4" value="400">
+      <input type="radio" name="user-role" data-name="Administrator" data-role="4" value="<%=Role.admin%>">
       <%= t 'manage.user.role.admin' %>
     </label>
     <input type="submit" value="<%= t 'manage.base.add_btn' %>" class="btn btn-primary" id="manage-user-add-new"/>
@@ -142,7 +163,7 @@
     </div>
     <div class="assign-kpi-right" id="assign-kpi-right">
       <div class="select-div">
-        <select data-placeholder="* <%= t 'manage.user.desc.name'%>"  class="chosen-select" style="width:180px;" id="assign-kpi-user">
+        <select data-placeholder="* <%= t 'manage.user.desc.name' %>" class="chosen-select" style="width:180px;" id="assign-kpi-user">
           <option></option>
           <% @users.each_with_index do |user, i| %>
               <option value="<%= user.id %>"><%= user.email %></option>
@@ -153,8 +174,8 @@
       </div>
     </div>
     <div class="assign-kpi-bottom">
-      <p><%= t 'manage.user.desc.assign'%></p>
-      <a class="btn btn-primary" id="assign-kpi-cancel"><%= t 'manage.base.finish'%></a>
+      <p><%= t 'manage.user.desc.assign' %></p>
+      <a class="btn btn-primary" id="assign-kpi-cancel"><%= t 'manage.base.finish' %></a>
     </div>
   </div>
 </div>
