--- a/app/views/entities/index.html.erb
+++ b/app/views/entities/index.html.erb
@@ -34,15 +34,6 @@
       </ul>
     </div>
 
-
-
-
-
-
-
-
-
-
   </div>
 
   <aside class="content-right-nav" name='department' id="content-right-nav">
@@ -50,7 +41,7 @@
     <section class="solid" style="position:relative">
       <h3><%= t 'manage.department.desc.create'%></h3>
       <p><%= t 'manage.department.desc.create_desc'%></p>
-      <a class="btn btn-primary" id="add-department">Create Now</a>
+      <a class="btn btn-primary" id="add-department"><%= t 'manage.department.desc.create'%></a>
       <div class="content-right-nav-add-block" id="content-right-nav-add-block" name="department">
         <p><%= t 'manage.department.desc.give_name'%></p>
         <input type='text' />
