--- a/app/views/entities/index.html.erb
+++ b/app/views/entities/index.html.erb
@@ -40,9 +40,9 @@
         <div class="manage-user-add" id="user-edit" general="manage-user-add">
           <i class="icon-remove" id="close-user-edit" general="close-user"></i>
           <div>
-            <input type="text" placeholder="* <%= t 'manage.department.desc.name' %>" id="edit-entity-name" general="entity-name"/>
-            <input type="text" placeholder="<%= t 'manage.department.desc.code' %>" id="edit-entity-code" general="entity-code"/>
-            <input type="text" placeholder="<%= t 'manage.department.desc.description' %>" id="edit-entity-description" general="entity-description"/>
+            <input type="text" placeholder="* <%= t 'manage.department.desc.name' %>" id="edit-entity-name" general="entity-name" class="clear-input"/>
+            <input type="text" placeholder="<%= t 'manage.department.desc.code' %>" id="edit-entity-code" general="entity-code" class="clear-input"/>
+            <input type="text" placeholder="<%= t 'manage.department.desc.description' %>" id="edit-entity-description" general="entity-description"  class="clear-input"/>
             <input type="submit" value="Ok" class="btn btn-primary" id="manage-entity-edit-old"/>
           </div>
         </div>
