--- a/app/assets/stylesheets/2_column_right_nav.css
+++ b/app/assets/stylesheets/2_column_right_nav.css
@@ -182,7 +182,7 @@
     height:49px;
     background-color:#5688A9;
     position:relative;
-    border-bottom:1px solid #DCDCDC;
+    /*border-bottom:1px solid #DCDCDC;*/
     z-index:20;
     box-shadow:0 -1px 1px rgba(0, 0, 0, 0.35) inset;
     -moz-box-shadow:0 -1px 1px rgba(0, 0, 0, 0.35) inset;
