--- a/app/assets/stylesheets/Manage-department.css
+++ b/app/assets/stylesheets/Manage-department.css
@@ -1,6 +1,11 @@
 .content-right-nav-add-block[name="department"]{
     top:145px;
 }
+/********************************************************************************************************* right content
+*******************************************************************************************************************/
+.manage-left-content[name="department"] .manage-right-content{
+    left:0px;
+}
 .right-list-top-control[name="department"]>.icheckbox_minimal-aero{
     left:18px;
 }
@@ -9,6 +14,20 @@
 }
 .manage-sort-list[name="department"]{
     padding-left:18px;
+}
+/*新建输入点那一块*/
+.add-entity-block textarea{
+    width:140px;
+    min-width:140px;
+    max-width:140px;
+    height:50px;
+    min-height:50px;
+    max-height:200px;
+    margin-left: 25px;
+    padding: 5px 4px;
+    font-family: "open-sans";
+    font-size: 13px;
+    font-weight: lighter;
 }
 /********************************************************************************************************* 新建
 *******************************************************************************************************************/
