--- a/app/views/entity_groups/index.html.erb
+++ b/app/views/entity_groups/index.html.erb
@@ -4,7 +4,7 @@
         <div class="content-left-main" name="view" id="content-left-main">
             <div style="width:auto;height:71px;"></div>
             <div class="left-content-title" id="left-content-title">
-                <p class="current-group-item"><%= t 'manage.view.desc.manage'%></p>
+                <p class="current-group-item"><%= t 'menu.my_view'%></p>
             </div>
 
             <div class="manage-left-content" id="manage-left-content">
