--- a/app/views/kpi_categories/_left_menu.html.erb
+++ b/app/views/kpi_categories/_left_menu.html.erb
@@ -4,7 +4,7 @@
      </li>
      <li id="manage-menu-add">
           <input type="text" />
-          <span><i class="icon-plus"></i> Category</span>
+          <span><i class="icon-plus"></i>  <%= t 'manage.kpi.category'%></span>
           <p class="manage-add-tooltip">
             <%= t 'manage.base.enter_confirm '%>
                <br />
