--- a/app/views/kpis/_list.html.erb
+++ b/app/views/kpis/_list.html.erb
@@ -1,5 +1,5 @@
 <ul id="manage-sort-list" class="manage-sort-list">
-     <%@kpis.each_with_index do |kpi,i|%>
+     <%@kpis.each do |kpi|%>
      <li id="<%= kpi.id%>">
           <p class="sort-handle">
                :
