--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -30,7 +30,7 @@
         <a guide-name="report_menu"  href="<%= entity_groups_path %>"> <span><%= t 'menu.my_view' %></span></a>
       </li>
       <li>
-        <a guide-name="report_menu"  href="<%= entity_groups_path %>"> <span><%= t 'menu.my_kpi' %></span></a>
+        <a guide-name="report_menu"  href="<%= access_kpis_path%>"> <span><%= t 'menu.my_kpi' %></span></a>
       </li>
       <%if current_user.director?%>
       <li>
