--- a/app/assets/stylesheets/treeview.css
+++ b/app/assets/stylesheets/treeview.css
@@ -118,13 +118,16 @@ right connector from last child*/
 }
 
 .tree li p:hover, .tree li p:hover+ul li p {
-        background: #c8e4f8; color: #000; border: 1px solid #94a0b4;
+    background: #c8e4f8; color: #000;
 }
 
 /*Time for some hover effects*/
 /*We will apply the hover effect the the lineage of the element also*/
-.tree li a:hover, .tree li a:hover+ul li a , .tree li a:hover+ul li p{
-        background: #c8e4f8; color: #000; border: 1px solid #94a0b4;
+.tree li a:hover,
+.tree li a:hover~ul li a ,
+.tree li a:hover~ul li p{
+    background: #c8e4f8;
+    color: #000;
 }
 
 
