add href to users in department

--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -39,7 +39,7 @@
         <li>qi.li</li>
         <li>zixiao.wang</li>
       </ul>
-      <a class="btn btn-primary">安排用户</a>
+      <a class="btn btn-primary" href="<%= users_path %>">安排用户</a>
     </div>
   </section>
 </div>
