--- a/app/assets/stylesheets/Manage-part.scss
+++ b/app/assets/stylesheets/Manage-part.scss
@@ -218,17 +218,17 @@ $pColor-3:#9d9d9d;
     }
   }
   .inner{
-    padding:5px 10px;
+    padding:5px 0px;
     h4{
       font-size:21px;
       color:$tree-blue;
       font-weight:lighter;
-      padding:5px 6px;
+      padding:5px 16px;
     }
     ul{
-      padding:5px 7px 3px;
+      padding:5px 0px 3px;
       li{
-        padding:6px 2px;
+        padding:6px 19px;
         font-size:12px;
         color:#222;
         cursor:pointer;
@@ -236,7 +236,8 @@ $pColor-3:#9d9d9d;
         @include word-break;
         border-bottom:1px solid rgba(0,0,0,0.05);
         &:hover{
-          color:$blue;
+          background:$blue;
+          color:#fff;
         }
       }
     }
