--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,16 +24,16 @@
                     <tr>
                       <td class="user-manage-name"><%= user.first_name %></td>
                       <td class="user-manage-title"><%= user.title %></td>
-                      <td class="user-manage-entity-group" value="<%= user.entity_group_id %>"><%= user.entity_group_name %></td>
+                      <td class="user-manage-department" value="<%= user.department_id %>"><%= user.department_name %></td>
                       <td class="user-manage-entity" value="<%= user.entity_id %>"><%= user.entity_name %></td>
                       <td class="user-manage-authority" value="<%= user.role_id %>"><%= UsersHelper.get_user_role_display(user.role_id) %></td>
                     </tr>
                     <tr>
                       <td class="user-manage-mail"><%= user.email %></td>
-                      <td><%= t 'manage.user.desc.title' %></td>
-                      <td><%= t 'manage.user.new.entity_group' %></td>
-                      <td><%= t 'manage.user.new.dep' %></td>
-                      <td><%= t 'manage.user.desc.authority' %></td>
+                      <td><%= t 'manage.user.new.title' %></td>
+                      <td><%= t 'manage.user.new.department' %></td>
+                      <td><%= t 'manage.user.new.entity' %></td>
+                      <td><%= t 'manage.user.new.authority' %></td>
                     </tr>
                   </table>
                 </li>
@@ -49,7 +49,7 @@
             <input type="text" placeholder="<%= t 'manage.user.new.title' %>" id="edit-user-title" general="user-title"/>
 
             <div>
-              <select data-placeholder="<%= t 'manage.user.new.entity_group' %>"  id="edit-entity-group-for-kpi" class="single-select">
+              <select data-placeholder="<%= t 'manage.user.new.department' %>" multiple  id="edit-department-for-kpi" class="single-select">
                 <option value=""></option>
                 <% @departments.each do |department| %>
                     <option value="<%= department.id %>"><%= department.name %></option>
@@ -57,7 +57,7 @@
               </select>
             </div>
             <div>
-              <select data-placeholder="<%= t 'manage.user.new.dep' %>"  id="edit-department-for-kpi"  class="single-select">
+              <select data-placeholder="<%= t 'manage.user.new.entity' %>"  id="edit-enity-for-kpi"  class="single-select">
                 <option value=""></option>
                 <% @data_points.each do |data_point| %>
                     <option value="<%= data_point.id %>"><%= data_point.name %></option>
@@ -112,15 +112,14 @@
     <input type="password" placeholder="* <%= t 'manage.user.new.pwd_con' %>" id="new-user-password-confirm"/>
 
     <div class="div-select">
-      <select data-placeholder="<%= t 'manage.user.new.entity_group' %>" id="entity-group-for-kpi"  class="single-select">
-        <option value=""></option>
+      <select data-placeholder="<%= t 'manage.user.new.department' %>" id="department-for-kpi" multiple class="single-select">
         <% @departments.each do |department| %>
             <option value="<%= department.id %>"><%= department.name %></option>
         <% end %>
       </select>
     </div>
     <div class="div-select">
-      <select data-placeholder="<%= t 'manage.user.new.dep' %>" id="department-for-kpi"  class="single-select">
+      <select data-placeholder="<%= t 'manage.user.new.entity' %>" id="entity-for-kpi"  class="single-select">
         <option value=""></option>
         <% @data_points.each do |data_point| %>
             <option value="<%= data_point.id %>"><%= data_point.name %></option>
@@ -159,7 +158,7 @@
     </div>
     <div class="assign-kpi-right" id="assign-kpi-right">
       <div class="select-div">
-        <select data-placeholder="* <%= t 'manage.user.desc.name' %>" class="chosen-select" style="width:180px;" id="assign-kpi-user">
+        <select data-placeholder="* <%= t 'manage.user.new.name' %>" class="chosen-select" style="width:180px;" id="assign-kpi-user">
           <option></option>
           <% @users.each_with_index do |user, i| %>
               <option value="<%= user.id %>"><%= user.email %></option>
