--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -36,12 +36,20 @@
     <div class="inner">
       <p>部门所含用户</p>
       <ul class="users">
-        <li>qi.li</li>
-        <li>zixiao.wang</li>
       </ul>
-      <a class="btn btn-primary" href="<%= users_path %>">安排用户</a>
+      <a id="btn-add-user" class="btn btn-primary" href="#">安排用户</a>
     </div>
   </section>
+</div>
+
+<div id="add-user" class="add-entity">
+  <i class="icon-remove"></i>
+   <div class="inner">
+     <h4>Add Department User</h4>
+     <ul>
+       <li>Zhangsan</li>
+     </ul>
+   </div>
 </div>
 
 <div id="add-entity" class="add-entity">
@@ -49,11 +57,6 @@
    <div class="inner">
      <h4>添加输入点</h4>
      <ul>
-       <li>S-BSD</li>
-       <li>SDF</li>
-       <li>SF</li>
-       <li>FSF</li>
-       <li>C</li>
      </ul>
    </div>
 </div>
