--- a/app/views/kpis/access.html.erb
+++ b/app/views/kpis/access.html.erb
@@ -3,7 +3,7 @@
     <div style="width:auto;height:71px;"></div>
     <div class="left-content-title" id="left-content-title">
       <p class="current-group-item">
-        <%= t 'manage.kpi.title'%>
+        <%= t 'menu.my_kpi'%>
       </p>
     </div>
     <div class="manage-left-content" id="manage-left-content">
