--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -6,8 +6,8 @@
             <li entity_group="<%= e.id %>" class="entity_root" >
               <a entity_group="<%= e.id %>"><i class="icon-globe"></i> <%= e.name%></a>
               <div class="add-block">
-                <label class="add-block-part"><i class="icon-plus-sign"></i> 添加部门</label>
-                <label class="add-block-entity"><i class="icon-plus-sign"></i> 添加观察点</label>
+                <label class="add-block-part"><i class="icon-plus-sign"></i><%= t 'manage.departments.desc.add-user'%></label>
+                <label class="add-block-entity"><i class="icon-plus-sign"></i> <%= t 'manage.departments.desc.add-entity'%></label>
               </div>
             </li>
           </ul>
@@ -19,25 +19,25 @@
 <div class="part-right" id="part-info">
   <section class="title">
     <div class="inner">
-      <p>管理部门</p>
+      <p><%= t 'manage.departments.desc.manage'%></p>
     </div>
   </section>
   <section class="basic">
     <div class="inner">
-      <p>部门基础信息</p>
+      <p><%= t 'manage.departments.desc.basic'%></p>
       <dl>
-        <dt>名称:</dt>
+        <dt><%= t 'manage.departments.desc.basic-name'%>:</dt>
         <dd class='name' post='name'>Leoni-shanghai</dd>
       </dl>
-      <a class="btn btn-danger">删除部门</a>
+      <a class="btn btn-danger"><%= t 'manage.departments.desc.delete-department'%></a>
     </div>
   </section>
   <section class="users">
     <div class="inner">
-      <p>部门所含用户</p>
+      <p><%= t 'manage.departments.desc.users'%></p>
       <ul class="users">
       </ul>
-      <a id="btn-add-user" class="btn btn-primary" href="#">安排用户</a>
+      <a id="btn-add-user" class="btn btn-primary" href="#"><%= t 'manage.departments.desc.add-user'%></a>
     </div>
   </section>
 </div>
@@ -55,17 +55,17 @@
 <div id="add-entity" class="add-entity">
   <i class="icon-remove"></i>
    <div class="inner">
-     <h4>添加输入点</h4>
+     <h4><%= t 'manage.departments.desc.add-entity'%></h4>
      <ul>
      </ul>
    </div>
 </div>
 
 <div class="user-block" id="user-block">
-  <p>添加部门</p>
-  <input type='text' placeholder="部门名称"/>
-  <a class="cancel">取消</a>
-  <a class="add">添加</a>
+  <p><%= t 'manage.departments.desc.add-department'%></p>
+  <input type='text' placeholder="<%= t 'manage.departments.desc.basic-name'%>"/>
+  <a class="add"><%= t 'manage.departments.desc.add-ok'%></a>
+  <a class="cancel"><%= t 'manage.departments.desc.add-cancle'%></a>
 </div>
 
 <ul id="hidden-entity" style="display:none">
