fix department bu

--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -6,7 +6,7 @@
             <li entity_group="<%= e.id %>" class="entity_root" >
               <a entity_group="<%= e.id %>"><i class="icon-globe"></i> <%= e.name%></a>
               <div class="add-block">
-                <label class="add-block-part"><i class="icon-plus-sign"></i><%= t 'manage.departments.desc.add-user'%></label>
+                <label class="add-block-part"><i class="icon-plus-sign"></i><%= t 'manage.departments.desc.add-department'%></label>
                 <label class="add-block-entity"><i class="icon-plus-sign"></i> <%= t 'manage.departments.desc.add-entity'%></label>
               </div>
             </li>
@@ -46,7 +46,7 @@
 <div id="add-user" class="add-entity">
   <i class="icon-remove"></i>
    <div class="inner">
-     <h4>Add Department User</h4>
+     <h4><%= t 'manage.departments.desc.add-user'%></h4>
      <ul>
        <li>
          Zhangsan
