--- a/app/views/entity_groups/_left_menu.html.erb
+++ b/app/views/entity_groups/_left_menu.html.erb
@@ -1,4 +1,4 @@
-<ul class="manage-left-menu" id="manage-left-menu" type="entity">
+<ul class="manage-left-menu" id="manage-left-menu" type="entity_groups">
   <li><%= t 'manage.view.desc.name' %></li>
   <li id="manage-menu-add">
     <input type="text"/>
