--- a/app/views/kpi_categories/_left_readonly_menu.html.erb
+++ b/app/views/kpi_categories/_left_readonly_menu.html.erb
@@ -1,4 +1,4 @@
-<ul class="manage-left-menu" id="manage-left-menu" type="category">
+<ul class="manage-left-menu" id="manage-left-menu" type="category" special="my-kpi">
   <li>
     <%= t 'manage.kpi.category' %>
   </li>
