--- a/app/assets/stylesheets/Manage-kpi.css
+++ b/app/assets/stylesheets/Manage-kpi.css
@@ -7,6 +7,33 @@
     color:rgba(0, 0, 0, 0.65);
     padding:29px 0 1px;
 }
+.manage-left-menu[type="category"][special="my-kpi"] li:first-of-type{
+    margin-bottom:21px;
+}
+.manage-left-menu[type="category"][special="my-kpi"] li:nth-of-type(2){
+    text-align:center;
+    color:rgba(0,0,0,0.2);
+    padding:7px 24px;
+    cursor:pointer;
+    transition:padding 0.3s ease-out;
+    position:relative;
+    width:auto;
+    margin:auto;
+    height:auto;
+    border-radius:0px;
+    -moz-border-radius:0px;
+    -webkit-border-radius:0px;
+    background-color:rgba(0,0,0,0);
+}
+.manage-left-menu[type="category"][special="my-kpi"] li:nth-of-type(2):hover{
+    background-color:#e2e7ef;
+}
+.manage-left-menu[type="category"][special="my-kpi"] li:nth-of-type(2):hover a{
+    color:rgba(0,0,0,0.5);
+}
+.manage-left-menu[type="category"][special="my-kpi"] li:nth-of-type(2).active{
+    background-color:#e2e7ef
+}
 /********************************************************************************************************* 右边的内容部分
 *******************************************************************************************************************/
 .manage-btn-group>a.kpi-library-btn{
