--- a/app/assets/stylesheets/Manage-user.css
+++ b/app/assets/stylesheets/Manage-user.css
@@ -22,6 +22,7 @@
 }
 .manage-user-add.create-user .div-select{
     margin-left:25px;
+    margin-bottom:10px;
 }
 .manage-user-add[id="user-edit"]{
     position:absolute;
@@ -61,6 +62,10 @@
     font-size:13px;
     font-weight:lighter;
     font-family:"open-sans";
+}
+.manage-user-add>div>.div-select{
+    margin-left:25px;
+    margin-bottom:10px;
 }
 /*radio*/
 .manage-user-add>div>label{
