--- a/app/assets/stylesheets/Manage-view.css
+++ b/app/assets/stylesheets/Manage-view.css
@@ -106,3 +106,35 @@
 .manage-user-add[special="entity"]>ul h3:hover{
     color:#F5A133;
 }
+/*2014.2 new add(my view)*/
+.manage-left-menu[type="entity_groups"] li:first-of-type{
+    text-align:center;
+    font-weight:lighter;
+    font-size:15px;
+    color:rgba(0, 0, 0, 0.65);
+    padding:29px 0 1px;
+}
+
+.manage-entity-add>ul{
+    padding-top:5px !important;
+}
+
+.user-share-list>h4{
+    color:rgba(255,255,255,0.8);
+    text-align:center;
+    font-size:17px;
+    font-weight:200;
+}
+.user-share-list>h4:first-of-type{
+    margin-top:50px !important;
+}
+.user-share-list>h4:nth-of-type(2){
+    margin-top:25px !important;
+}
+.user-share-list>ul{
+    padding-top:5px !important;
+}
+.user-share-list>ul>li>h3{
+    padding:6px 5px !important;
+    font-size:14px !important;
+}
