--- a/app/assets/stylesheets/Manage.css
+++ b/app/assets/stylesheets/Manage.css
@@ -103,9 +103,17 @@
     white-space:nowrap;
     font-size:15px;
 }
+.manage-left-menu li i.icon-columns{
+    position:absolute;
+    top:10px;
+    left:6px;
+    color:rgba(0,0,0,0.4);
+    font-size:13px;
+    pointer-events:auto;
+}
 .manage-left-menu li i.icon-item{
     position:absolute;
-    top:7px;
+    top:9px;
     color:rgba(0,0,0,0.4);
     display:none;
     pointer-events:auto;
@@ -115,7 +123,7 @@
     color:#f05c5c;
 }
 .manage-left-menu li .icon-trash{
-    left:6px;
+    right:6px;
 }
 
 
